removed commented code and updated compose props